# tg-example

./: README.md  parse_cities.py  parse_states.py  pyproject.toml
data/: crest.json  crest_states.json
src/: main.py
src/app/: app.py
src/app/dispatcher/: dispatcher.py
src/app/rts/: router.py
src/core/bot/: manager.py
src/core/ctl/coa/: controller.py
src/core/ctl/echo/: controller.py
src/core/stg/coa/ds/: storage.py
src/core/stg/coa/ds/load/: loader.py
src/core/stg/coa/state/: storage.py
src/core/unit/coa/ds/: model.py
src/core/unit/coa/state/: model.py  status.py
src/settings/: settings.py
